Arreglo de la regla 10,regla 4 y regla 15 con record para inmutabilidad