@@ -1,37 +1,36 @@
 package com.jcaa.usersmanagement.domain.model;
 
-import lombok.Value;
+import java.util.Objects;
 
-@Value
-public class EmailDestinationModel {
 
-  String destinationEmail;
-  String destinationName;
-  String subject;
-  String body;
+public record EmailDestinationModel(
+        String destinationEmail,
+        String destinationName,
+        String subject,
+        String body
+) {
 
-  public EmailDestinationModel(
-      final String destinationEmail,
-      final String destinationName,
-      final String subject,
-      final String body) {
-    this.destinationEmail = validateNotBlank(destinationEmail, "El email del destinatario es requerido.");
-    this.destinationName  = validateNotBlank(destinationName,  "El nombre del destinatario es requerido.");
-    this.subject          = validateNotBlank(subject,          "El asunto es requerido.");
-    this.body             = validateNotBlank(body,             "El cuerpo del mensaje es requerido.");
-  }
 
-  private static String validateNotBlank(final String value, final String errorMessage) {
-    // VIOLACIÓN Regla 4: se usa == null en lugar de Objects.requireNonNull() o Objects.isNull().
-    // Para objetos siempre debe usarse Objects.isNull/nonNull, nunca operadores == o !=.
-    if (value == null) {
-      throw new NullPointerException(errorMessage);
+    private static final String EMAIL_REQUIRED_MSG = "El email del destinatario es requerido.";
+    private static final String NAME_REQUIRED_MSG  = "El nombre del destinatario es requerido.";
+    private static final String SUBJECT_REQUIRED_MSG = "El asunto es requerido.";
+    private static final String BODY_REQUIRED_MSG    = "El cuerpo del mensaje es requerido.";
+
+
+    public EmailDestinationModel {
+        validateNotBlank(destinationEmail, EMAIL_REQUIRED_MSG);
+        validateNotBlank(destinationName, NAME_REQUIRED_MSG);
+        validateNotBlank(subject, SUBJECT_REQUIRED_MSG);
+        validateNotBlank(body, BODY_REQUIRED_MSG);
     }
-    // VIOLACIÓN Regla 10: mensajes de error hardcodeados en el cuerpo del método,
-    // en lugar de definirse como constantes con nombre descriptivo.
-    if (value.trim().isEmpty()) {
-      throw new IllegalArgumentException(errorMessage);
+
+    private static void validateNotBlank(final String value, final String errorMessage) {
+
+        Objects.requireNonNull(value, errorMessage);
+
+
+        if (value.isBlank()) {
+            throw new IllegalArgumentException(errorMessage);
+        }
     }
-    return value;
-  }
 }
